# doit

./: .gitignore  README.md  pyproject.toml  pytest.ini  run_tests_simple.sh  setup.sh
examples/: example_config.yaml  example_playwright_config.yaml  test_action_dispatcher.py  test_agent_core.py  test_auto_sso.py  test_browser_adapter.py  test_browser_interaction.py  test_config_loading.py  test_json_parser.py  test_m2_chat_flow.py  test_persistent_session.py  test_prompt_builder.py  test_quick_launch.py  test_real_filemanager.py  test_real_permissions.py  test_real_workspace.py  test_round_trip.py  test_runner.py  test_runner_real.py  test_selector_discovery.py  test_selectors.py  test_send_button.py  test_state_manager.py
src/doit/: browser.py  cli.py  config.py  files.py  git_wrapper.py  logging.py  orchestrator.py  permissions.py
src/doit/browser/: controller.py
src/doit/core/: __init__.py  action_dispatcher.py  browser_llm_adapter.py  json_parser.py  prompt_builder.py  runner.py  state_manager.py
src/doit/plugins/: __init__.py  base.py  ralph_loop.py  summarize_conversation.py  summarize_file.py  summarize_web_page.py  summarize_youtube.py
tests/: conftest.py
tests/integration/: test_browser_interaction.py
tests/unit/: conftest.py  test_config.py  test_files.py  test_permissions.py  test_selector_validation.py
