[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doit"
version = "0.0.1"
description = "Local agent with Playwright+Edge and plugin-based capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
doit = "doit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

# Black configuration (optional - remove if not using)
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

# Ruff configuration (optional - remove if not using)
[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "C", "B", "UP"]
ignore = ["E501"]

# MyPy configuration (optional - remove if not using)
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true